# aegis-smcp-gateway

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  smcp-gateway-config.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  docker-pr.yml  docker-publish.yml  release.yml  security.yml
migrations/: 0001_initial_schema.sql  0003_seen_jtis_expires_at_index.sql
proto/: smcp_gateway.proto
src/: main.rs
src/application/: cli_engine.rs  credential_resolver.rs  explorer.rs  invocation.rs  mod.rs  native_tools.rs  semantic_gate.rs  workflow_engine.rs
src/domain/: api_spec.rs  cli_tool.rs  config_manifest.rs  events.rs  mod.rs  repositories.rs  seal.rs  security_context.rs  smcp.rs  tool_workflow.rs
src/infrastructure/: auth.rs  config.rs  container_cli.rs  errors.rs  http_client.rs  jwks_validator.rs  mod.rs  openapi.rs  seal.rs  security_contexts.rs  smcp.rs
src/infrastructure/persistence/: mod.rs  postgres.rs  schema.sql  schema_postgres.sql  sqlite.rs
src/presentation/: control_plane.rs  grpc.rs  invocation.rs  mod.rs  openapi.rs  state.rs  ui.rs
src/presentation/ui_assets/: app.js  index.html  styles.css
